<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com._4point.aem</groupId>
		<artifactId>formsfeeder</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>formsfeeder.core</artifactId>
	<name>AEM Forms Feeder Core Classes</name>
	<description>Project containing common classes that are used by other Forms Feeder projects.</description>

	<properties>
		<!--  Client applications may be in Java 8, so compile for that. -->
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.release>8</maven.compiler.release>
	</properties>
	<!--
	In order to build this project, you just need to use the standard build procedure.  One of the two following options:
	install
	clean install
	 -->
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit-addons</groupId>
			<artifactId>junit-addons</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>	<!-- In-memory File System for writing/reading during unit testing. -->
			<groupId>com.google.jimfs</groupId>
			<artifactId>jimfs</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>